# libmem-cmake

./: README.md  libmem-config.cmake
example/: CMakeLists.txt
example/src/: main.cpp  main.hpp
